--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -4,7 +4,7 @@
          verbose="true"
          backupGlobals="false"
          backupStaticAttributes="false"
-         stopOnFailure="false">
+         stopOnFailure="true">
     <testsuites>
         <testsuite name="BoilerAppLogger">
             <directory suffix=".php">./BoilerAppLoggerTest/</directory>
